// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: cannot import 1`] = `
<div
  className="boxed-group"
  id="project-import"
>
  <div
    className="boxed-group-header"
  >
    <h2>
      project_dump.import
    </h2>
  </div>
  <div
    className="boxed-group-inner"
    id="import-not-possible"
  >
    project_dump.can_not_import
  </div>
</div>
`;

exports[`should render correctly: failed 1`] = `
<div
  className="boxed-group"
  id="project-import"
>
  <div
    className="boxed-group-header"
  >
    <h2>
      project_dump.import
    </h2>
  </div>
  <div
    className="boxed-group-inner"
  >
    <Alert
      id="export-in-progress"
      variant="error"
    >
      project_dump.failed_import
      <ForwardRef(Link)
        className="spacer-left"
        to={
          {
            "hash": "",
            "pathname": "/project/background_tasks",
            "search": "?id=key&status=FAILED&taskType=PROJECT_IMPORT",
          }
        }
      >
        project_dump.see_details
      </ForwardRef(Link)>
    </Alert>
    <div>
      <div
        className="spacer-bottom"
      >
        project_dump.import_form_description
      </div>
      <Button
        onClick={[Function]}
      >
        project_dump.do_import
      </Button>
    </div>
  </div>
</div>
`;

exports[`should render correctly: import disabled 1`] = `
<div
  className="boxed-group import-disabled text-muted"
  id="project-import"
>
  <div
    className="boxed-group-header"
  >
    <h2>
      project_dump.import
    </h2>
  </div>
  <div
    className="boxed-group-inner"
  >
    project_dump.import_form_description_disabled
  </div>
</div>
`;

exports[`should render correctly: import form 1`] = `
<div
  className="boxed-group"
  id="project-import"
>
  <div
    className="boxed-group-header"
  >
    <h2>
      project_dump.import
    </h2>
  </div>
  <div
    className="boxed-group-inner"
  >
    <div>
      <div
        className="spacer-bottom"
      >
        project_dump.import_form_description
      </div>
      <Button
        onClick={[Function]}
      >
        project_dump.do_import
      </Button>
    </div>
  </div>
</div>
`;

exports[`should render correctly: in progress 1`] = `
<div
  className="boxed-group"
  id="project-import"
>
  <div
    className="boxed-group-header"
  >
    <h2>
      project_dump.import
    </h2>
  </div>
  <div
    className="boxed-group-inner"
    id="import-in-progress"
  >
    <i
      className="spinner spacer-right"
    />
    <DateFromNow
      date="2020-03-12T12:20:20Z"
    >
      <Component />
    </DateFromNow>
  </div>
</div>
`;

exports[`should render correctly: no dump to import 1`] = `
<div
  className="boxed-group"
  id="project-import"
>
  <div
    className="boxed-group-header"
  >
    <h2>
      project_dump.import
    </h2>
  </div>
  <div
    className="boxed-group-inner"
  >
    <Alert
      id="import-no-file"
      variant="warning"
    >
      project_dump.no_file_to_import
    </Alert>
  </div>
</div>
`;

exports[`should render correctly: pending 1`] = `
<div
  className="boxed-group"
  id="project-import"
>
  <div
    className="boxed-group-header"
  >
    <h2>
      project_dump.import
    </h2>
  </div>
  <div
    className="boxed-group-inner"
    id="import-pending"
  >
    <i
      className="spinner spacer-right"
    />
    <DateTimeFormatter
      date="2020-03-12T12:15:20Z"
    >
      <Component />
    </DateTimeFormatter>
  </div>
</div>
`;

exports[`should render correctly: success 1`] = `
<div
  className="boxed-group"
  id="project-import"
>
  <div
    className="boxed-group-header"
  >
    <h2>
      project_dump.import
    </h2>
  </div>
  <div
    className="boxed-group-inner"
  >
    <DateTimeFormatter
      date="2020-03-12T12:22:20Z"
    >
      <Component />
    </DateTimeFormatter>
  </div>
</div>
`;

exports[`should render correctly: success, but with analysis -> show form 1`] = `
<div
  className="boxed-group"
  id="project-import"
>
  <div
    className="boxed-group-header"
  >
    <h2>
      project_dump.import
    </h2>
  </div>
  <div
    className="boxed-group-inner"
  >
    <Alert
      id="import-no-file"
      variant="warning"
    >
      project_dump.no_file_to_import
    </Alert>
  </div>
</div>
`;
